generator client {
  provider = "prisma-client"
  output   = "../app/generated/prisma"
}

datasource db {
  provider = "sqlite"
}

model User {
  id            String         @id @default(cuid())
  email         String         @unique
  name          String?
  password      String?
  emailVerified DateTime?      // needed for Auth.js
  image         String?
  role          String         @default("USER")
  status        String         @default("PENDING")

  accounts      Account[]
  sessions      Session[]
  sheets        MonthlySheet[]
  categories    Category[]
  capitalCategories  CapitalCategory[]
  sharedWithMe  SharedAccess[] @relation("SharedToUser")
  myShares      SharedAccess[] @relation("SharedFromUser")
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime
  @@unique([identifier, token])
}

model Category {
  id            String        @id @default(cuid())
  name          String
  type          String
  icon          String?
  order         Int?          @default(0)
  userId        String
  createdAt     DateTime      @default(now()) 
  updatedAt     DateTime      @default(now()) @updatedAt
  
  user          User          @relation(fields: [userId], references: [id], onDelete: Cascade)

  transactions  Transaction[]

  @@unique([userId, type, name])
}

model MonthlySheet {
  id            String        @id @default(cuid())
  month         Int
  year          Int
  userId        String
  user          User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  transactions  Transaction[]
  capitals      Capital[]

  createdAt     DateTime      @default(now())
  
  @@unique([month, year, userId]) // Does not allow multiple sheets for the same month and year for a user
}

model Transaction {
  id             String       @id @default(cuid())
  amount         Float
  description    String?
  date           DateTime     @default(now())
  type           String
  createdAt      DateTime     @default(now())

  categoryId     String
  category       Category     @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  monthlySheetId String
  monthlySheet   MonthlySheet @relation(fields: [monthlySheetId], references: [id], onDelete: Cascade)

  isRecurring    Boolean      @default(false)

  splitMonths    Int?         // total parts (null = not a split)
  splitIndex     Int?         // which part
  splitGroupId   String?      // links all parts of one split together
}

model Capital {
  id                 String          @id @default(cuid())
  amount             Float
  order              Int?            @default(0)
  monthlySheetId     String
  monthlySheet       MonthlySheet    @relation(fields: [monthlySheetId], references: [id], onDelete: Cascade)
  capitalCategoryId  String
  capitalCategory    CapitalCategory @relation(fields: [capitalCategoryId], references: [id], onDelete: Cascade)
}

model CapitalCategory {
  id        String    @id @default(cuid())
  name      String
  icon      String?
  color     String    @default("#64748B")
  order     Int?      @default(0)
  userId    String
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  capitals  Capital[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @default(now()) @updatedAt

  @@unique([userId, name])
}

model SharedAccess {
  id             String   @id @default(cuid())
  
  // Who shares
  ownerId        String
  owner          User     @relation("SharedFromUser", fields: [ownerId], references: [id])
  
  // Who is shared to
  sharedWithId   String
  sharedWith     User     @relation("SharedToUser", fields: [sharedWithId], references: [id])
  
  permission  String  @default("VIEW") // VIEW or EDIT

  createdAt      DateTime @default(now())

  @@unique([ownerId, sharedWithId])
}
